<resources>
    <string name="app_name">eMovie</string>

    <!-- Bottom Nav -->
    <string name="bottom_nav_movies_title">Movies</string>
    <string name="bottom_nav_favorites_title">Favorites</string>

    <!-- HomeFragment -->
    <string name="home_toolbar_title">Movies</string>
    <string name="home_empty_results_message">No results found</string>
    <string name="upcoming_title">Upcoming</string>
    <string name="top_rated_title">Top Rated</string>
    <string name="recommended_title">Recommended to you</string>
    <string name="year_button_message">Released in %s</string>
    <string name="language_button_message">In %s</string>
    <string name="language_default_selection">All Languages</string>
    <string name="release_year_default_selection">All Years</string>
    <string name="empty_recommended_movies_message">No movies found. Try changing the filters…</string>

    <!-- Favorites Fragment -->
    <string name="favorites_title">My Favorites</string>
    <string name="favorites_empty_message">Wait no more! You can go back and add new favorites to your collection!</string>
    <string name="favorite_movie_content_description">Favorite Movie Image</string>
    <string name="favorite_movie_favorite_btn_description">Remove Favorite Button</string>

    <!-- Details Fragment -->
    <string name="detail_video_section_title">Videos</string>
    <string name="detail_similar_movies_section_title">Similar movies</string>
    <string name="detail_similar_movies_subtitle">You might also like</string>
    <string name="detail_no_movie_information_message">No movie details found…</string>

    <!-- Others -->
    <string name="empty_all_message">No results found</string>
    <string name="error_view_message">Ups… There was an error connecting to the server. Please try again</string>

</resources>