<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <import type="android.text.TextUtils"/>

        <variable
            name="viewModel"
            type="au.com.carsales.emovie.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:animateLayoutChanges="true"
        android:padding="@dimen/default_view_padding">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryDarkColor_40"
            android:fitsSystemWindows="true"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/newToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                app:titleTextColor="@color/white">

                <ImageView
                    android:layout_width="@dimen/brand_logo_width"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_brand_logo"
                    android:layout_gravity="center"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{viewModel.isLoading() | viewModel.isError() | viewModel.isEmpty() ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/upcomingTitleTextView"
                        style="@style/HomeTitleText"
                        android:text="@string/upcoming_title" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/upcomingMoviesRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="7"
                        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/view_cell_movie"
                        tools:orientation="horizontal"
                        tools:scrollbars="vertical" />

                    <TextView
                        android:id="@+id/topRatedTitleTextView"
                        android:layout_width="wrap_content"
                        style="@style/HomeTitleText"
                        android:text="@string/top_rated_title"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/topRatedMoviesRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="7"
                        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/view_cell_movie"
                        tools:orientation="horizontal"
                        tools:scrollbars="vertical" />

                    <TextView
                        android:id="@+id/recommendedTitleTextView"
                        style="@style/HomeTitleText"
                        android:text="@string/recommended_title"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/filterLanguageButton"
                            style="@style/HomeFilterButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{@string/language_button_message(TextUtils.isEmpty(viewModel.userPreferencesLiveData.languageFilter) ? @string/language_default_selection : viewModel.userPreferencesLiveData.languageFilter )}"
                            android:layout_marginHorizontal="@dimen/home_filter_button_horizontal_margin"
                            android:paddingHorizontal="@dimen/home_filter_button_horizontal_padding"
                            android:paddingVertical="@dimen/home_filter_button_vertical_padding"
                            tools:text="In Spanish"
                            android:layout_marginVertical="@dimen/home_filter_button_vertical_margin"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/filterYearButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/home_filter_button_horizontal_margin"
                            android:paddingHorizontal="@dimen/home_filter_button_horizontal_padding"
                            android:paddingVertical="@dimen/home_filter_button_vertical_padding"
                            android:layout_marginVertical="@dimen/home_filter_button_vertical_margin"
                            tools:text="Released in 1993"
                            android:text="@{@string/year_button_message(TextUtils.isEmpty(viewModel.userPreferencesLiveData.releaseYearFilter) ? @string/release_year_default_selection : viewModel.userPreferencesLiveData.releaseYearFilter)}" />

                    </LinearLayout>

                    <au.com.carsales.emovie.utils.base.views.EmptyListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/home_empty_view_margin_top"
                        app:text="@string/empty_recommended_movies_message"
                        android:visibility="@{viewModel.isRecommendedMoviesEmpty ? View.VISIBLE : View.GONE}"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recommendedMoviesRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="7"
                        tools:spanCount="2"
                        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        tools:listitem="@layout/view_cell_movie_grid"
                        tools:orientation="vertical"
                        tools:scrollbars="vertical" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ProgressBar
            android:layout_width="@dimen/home_progress_bar_size"
            android:layout_height="@dimen/home_progress_bar_size"
            android:visibility="@{viewModel.isLoading() ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <au.com.carsales.emovie.utils.base.views.EmptyListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{viewModel.isLoading() || !viewModel.isEmpty() ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:text="@string/home_empty_results_message"
            tools:visibility="gone" />

        <au.com.carsales.emovie.utils.base.views.ErrorView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{viewModel.isLoading() || !viewModel.isError() ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:text="@string/error_view_message"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>